<resources>
    <string name="app_name">USM - FMI</string>
    <string name="send_feedback">Trimite Feedback</string>
    <string name="about">Detalii aplicatie</string>
    <string name="my_image">my_image</string>
    <string name="my_name">Linda Figlind</string>
    <string name="my_mail">linda@gmail.com</string>
    <string name="schedule">Orar</string>
    <string name="schedule_exams">Orar sesiune</string>
    <string name="diploma_exams">Examene de licenta</string>
    <string name="academic_calendar">Calendar Academic</string>
    <string name="messages">Mesaje</string>
    <string name="lessons">Discipline</string>
    <string name="settings">Setari</string>
    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close navigation drawer</string>
    <string name="login_button1">Intra</string>
    <string name="faculty_logo">Logoul FMI</string>
    <string name="faculty_text1">Facultatea de Matematica</string>
    <string name="faculty_text2">si Informatica</string>
    <string name="login_button2">Confirmare</string>
    <string name="register_button1">Inregistreazate</string>
    <string name="register_button2">Inregistreaza-ma</string>
    <string name="password">Parola (Obligatoriu)</string>
    <string name="confirm_password">Confirma parola (Obligatoriu)</string>
    <string name="mail">Mail</string>
    <string name="semestrial_marks">Note Semestriale</string>
    <string name="logout">Delogare</string>
    <string name="id_editText">IDNP</string>
    <string name="saveRoundButton">Salveaza IDNP</string>
    <string name="register_username">Nume Utilizator (Obligatoriu)</string>
    <string name="register_familyname">Nume Prenume</string>
    <string name="register_group">Alegeti grupa si subgrupa</string>
    <string name="change_server">Schimba Serverul</string>
    <string name="serverEditHint">Exemplu: 213.48.3.94:8567</string>
</resources>
