<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginBackground"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:id="@+id/scrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/fmi_logo_view_login"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/faculty_logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/usm_white_450x455" />

            <com.github.florent37.materialtextfield.MaterialTextField
                android:id="@+id/mailMaterialTextFieldRegister"
                android:layout_width="320dp"
                android:layout_height="80dp"
                android:layout_marginTop="85dp"
                app:layout_constraintBottom_toTopOf="@+id/passwordMaterialTextFieldRegister"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:mtf_image="@drawable/ic_mail_gray_24dp"
                app:mtf_labelColor="#e0ffffff"
                app:mtf_openKeyboardOnFocus="true">

                <EditText
                    android:id="@+id/mailEditTextRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mail"
                    android:inputType="text"
                    android:textColor="#000000"
                    android:textSize="17sp" />

            </com.github.florent37.materialtextfield.MaterialTextField>

            <com.github.florent37.materialtextfield.MaterialTextField
                android:id="@+id/passwordMaterialTextFieldRegister"
                android:layout_width="320dp"
                android:layout_height="80dp"
                app:layout_constraintBottom_toTopOf="@+id/confirmPasswordMaterialTextFieldRegister"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:mtf_image="@drawable/ic_vpn_key_black_24dp"
                app:mtf_labelColor="#e0ffffff"
                app:mtf_openKeyboardOnFocus="true">

                <EditText
                    android:id="@+id/passwordEditTextRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="#000000"
                    android:textSize="17sp" />

            </com.github.florent37.materialtextfield.MaterialTextField>

            <com.github.florent37.materialtextfield.MaterialTextField
                android:id="@+id/confirmPasswordMaterialTextFieldRegister"
                android:layout_width="320dp"
                android:layout_height="80dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toTopOf="@+id/registerButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:mtf_image="@drawable/ic_vpn_key_black_24dp"
                app:mtf_labelColor="#e0ffffff"
                app:mtf_openKeyboardOnFocus="true">

                <EditText
                    android:id="@+id/confirmPasswordEditTextRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:textColor="#000000"
                    android:textSize="17sp" />

            </com.github.florent37.materialtextfield.MaterialTextField>

            <com.marozzi.roundbutton.RoundButton
                android:id="@+id/registerButton"
                android:layout_width="271dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:onClick="tryRegister"
                android:text="@string/register_button2"
                android:textAppearance="@android:style/TextAppearance.Widget.DropDownHint"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintStart_toStartOf="parent"
                app:rb_animation_alpha="true"
                app:rb_animation_corner_radius="25dp"
                app:rb_animation_duration="150"
                app:rb_animation_progress_color="#7dec89"
                app:rb_animation_progress_padding="4dp"
                app:rb_animation_progress_width="2dp"
                app:rb_background_color="#388e43"
                app:rb_background_color_pressed="#1b7325"
                app:rb_corner_color="#79b77e"
                app:rb_corner_color_pressed="#00a63030"
                app:rb_corner_radius="28dp"
                app:rb_corner_width="1dp"
                app:rb_text_color="#e9e9e9"
                app:rb_text_color_pressed="#ffffff" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>